dev/tvplatform-admin-uploadms/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvplatform-admin-uploadms
  namespace: default
  labels:
    app: tvplatform-admin-uploadms
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tvplatform-admin-uploadms
      env: dev
  template:
    metadata:
      labels:
        app: tvplatform-admin-uploadms
        env: dev
    spec:
      containers:
      - name: tvplatform-admin-uploadms
        image: registry.digitalocean.com/obs-tvplatform-backend/tvplatform-admin-uploadms:10-dev # will be updated by jenkins PRs
        imagePullPolicy: Always
      imagePullSecrets:
      - name: obs-tvplatform-backend
