dev/tvplatform-admin-uploadms/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tvplatform-admin-uploadms-dev
  namespace: default
spec:
  type: NodePort
  selector:
    app: tvplatform-admin-uploadms-dev
    env: dev
  ports:
  - name: http
    port: 8000 # svc port
    targetPort: 8000 # app port
    # nodePort: 30010  # Port accessible externally on each node
